--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,12 +1,6 @@
-- name: Publish package
-  if: github.event_name == 'push' && startsWith(github.ref, 'main')
-  uses: pypa/gh-action-pypi-publish@release/v1
-  with:
-    password: ${{ secrets.PYPI_API_TOKEN }}
 
-
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: GitHub Actions Publish to PyPi
+run-name: Publish to PyPi
 on: [push]
 jobs:
   Explore-GitHub-Actions:
@@ -14,10 +8,9 @@ jobs:
     steps:
 
       - name: Publish package
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        if: github.event_name == 'push' && startsWith(github.ref, 'main')
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
 
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       
