--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -29,7 +29,7 @@ jobs:
           --outdir dist/
 
       - name: Publish package
-        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/origin/main')
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/main')
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
