--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - run: echo ${{ github.ref }}
+
       - uses: actions/checkout@master
 
       - name: Set up Python 3.10
