--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -31,7 +31,7 @@ jobs:
           --outdir dist/
 
       - name: Publish package
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/main')
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/main')
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
